--- a/schedule.qmd
+++ b/schedule.qmd
@@ -205,7 +205,7 @@ Unit 04: COLLINEARITY
 </td>
 <td style="vertical-align:middle;">Principal Components Analysis via Singular Value Decomposition</td>
 <td align="center" style="vertical-align:middle;">
-  <a class = "my-link" href="notes/08-pca-via-svd.html"><span class="fas fa-link"></span></a>
+  <a class = "my-link" href="notes/09-pca-via-svd.html"><span class="fas fa-link"></span></a>
 </td>
 </tr>
 
@@ -215,46 +215,39 @@ Unit 04: COLLINEARITY
 <td align="center" style="vertical-align:middle;">
   <!-- <a class="my-link" href="readings/10-pca-via-svd.html"><span class="fa fa-book"></span></a> -->
 </td>
-<td style="vertical-align:middle;">Principal Components on Different Matrices</td>
+<td style="vertical-align:middle;">Principal Components on Different Input Matrices</td>
 <td align="center" style="vertical-align:middle;">
   <!-- <a class = "my-link" href="notes/08-pca-via-svd.html"><span class="fas fa-link"></span></a> -->
 </td>
 </tr>
 
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Oct. 27</td> -->
-<!-- <td align="center" style="vertical-align:middle;"></td> -->
-<!-- <td style="vertical-align:middle;">NO CLASS: Mental Health Day</td> -->
-<!-- <td align="center" style="vertical-align:middle;"></td> -->
-<!-- </tr> -->
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 01</td> -->
-<!-- <td align="center" style="vertical-align:middle;"></td> -->
-<!-- <td style="vertical-align:middle;">SVD using Different Inputs</td> -->
-<!-- <td align="center" style="vertical-align:middle;"></td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 01</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class="my-link" href="readings/11-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;" rowspan="2">Biased Estimation: Ridge Regression</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
+  <a class = "my-link" href="notes/10-biased-estimation-ridge-regression.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 03</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class="my-link" href="readings/11-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;" rowspan="2">Biased Estimation: Ridge Regression</td> -->
-<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
-<!--   <a class = "my-link" href="posts/2021-10-20-notes-biased-estimation-ridge-regression"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 02</td>
+</tr>
 
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 08</td> -->
-<!-- </tr> -->
 
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 08</td>
+<td align="center" style="vertical-align:middle;"></td>
+<td style="vertical-align:middle;">NO CLASS&mdash;Mental Health Break/Andy at a Conference</td>
+<td align="center" style="vertical-align:middle;"></td>
+</tr>
 
 <!-- Unit 05: MODEL SELECTION -->
 
