--- a/schedule.qmd
+++ b/schedule.qmd
@@ -176,11 +176,11 @@ Unit 04: COLLINEARITY
 <tr>
 <td align="center" style="vertical-align:middle;">&nbsp;</td>
 <td>Oct. 18</td>
-<td align="center" style="vertical-align:middle;">
+<td align="center" style="vertical-align:middle;" rowspan="2">
   <a class="my-link" href="readings/08-diagnosing-collinearity.html"><span class="fa fa-book"></span></a>
 </td>
-<td style="vertical-align:middle;">Diagnosing Collinearity</td>
-<td align="center" style="vertical-align:middle;">
+<td style="vertical-align:middle;" rowspan="2">Diagnosing Collinearity</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
   <a class = "my-link" href="notes/07-diagnosing-collinearity.html"><span class="fas fa-link"></span></a>
 </td>
 </tr>
@@ -188,18 +188,28 @@ Unit 04: COLLINEARITY
 <tr>
 <td align="center" style="vertical-align:middle;">&nbsp;</td>
 <td>Oct. 20</td>
-<td align="center" style="vertical-align:middle;">
+</tr>
+
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Oct. 25</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
   <a class="my-link" href="readings/09-pca-via-spectral-decomposition.html"><span class="fa fa-book"></span></a>
 </td>
-<td style="vertical-align:middle;">Principal Components Analysis via Spectral Decomposition</td>
-<td align="center" style="vertical-align:middle;">
+<td style="vertical-align:middle;" rowspan="2">Principal Components Analysis via Spectral Decomposition</td>
+<td align="center" style="vertical-align:middle;" rowspan="2">
   <a class = "my-link" href="notes/08-pca-via-spectral-decomposition.html"><span class="fas fa-link"></span></a>
 </td>
 </tr>
 
 <tr>
 <td align="center" style="vertical-align:middle;">&nbsp;</td>
-<td>Oct. 25</td>
+<td>Oct. 27</td>
+</tr>
+
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 01</td>
 <td align="center" style="vertical-align:middle;">
   <a class="my-link" href="readings/10-pca-via-svd.html"><span class="fa fa-book"></span></a>
 </td>
@@ -209,35 +219,30 @@ Unit 04: COLLINEARITY
 </td>
 </tr>
 
-<tr>
-<td align="center" style="vertical-align:middle;">&nbsp;</td>
-<td>Oct. 27</td>
-<td align="center" style="vertical-align:middle;">
-  <!-- <a class="my-link" href="readings/10-pca-via-svd.html"><span class="fa fa-book"></span></a> -->
-</td>
-<td style="vertical-align:middle;">Principal Components on Different Input Matrices</td>
-<td align="center" style="vertical-align:middle;">
-  <!-- <a class = "my-link" href="notes/08-pca-via-svd.html"><span class="fas fa-link"></span></a> -->
-</td>
-</tr>
+<!-- <tr> -->
+<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
+<!-- <td>Oct. 27</td> -->
+<!-- <td align="center" style="vertical-align:middle;"> -->
+<!--   <!-- <a class="my-link" href="readings/10-pca-via-svd.html"><span class="fa fa-book"></span></a> --> -->
+<!-- </td> -->
+<!-- <td style="vertical-align:middle;">Principal Components on Different Input Matrices</td> -->
+<!-- <td align="center" style="vertical-align:middle;"> -->
+<!--   <!-- <a class = "my-link" href="notes/08-pca-via-svd.html"><span class="fas fa-link"></span></a> --> -->
+<!-- </td> -->
+<!-- </tr> -->
 
 
 
 <tr>
 <td align="center" style="vertical-align:middle;">&nbsp;</td>
-<td>Nov. 01</td>
-<td align="center" style="vertical-align:middle;" rowspan="2">
+<td>Nov. 03</td>
+<td align="center" style="vertical-align:middle;">
   <a class="my-link" href="readings/11-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a>
 </td>
-<td style="vertical-align:middle;" rowspan="2">Biased Estimation: Ridge Regression</td>
-<td align="center" style="vertical-align:middle;" rowspan="2">
+<td style="vertical-align:middle;">Biased Estimation: Ridge Regression</td>
+<td align="center" style="vertical-align:middle;">
   <a class = "my-link" href="notes/10-biased-estimation-ridge-regression.html"><span class="fas fa-link"></span></a>
 </td>
-</tr>
-
-<tr>
-<td align="center" style="vertical-align:middle;">&nbsp;</td>
-<td>Nov. 02</td>
 </tr>
 
 
@@ -249,6 +254,18 @@ Unit 04: COLLINEARITY
 <td align="center" style="vertical-align:middle;"></td>
 </tr>
 
+<tr>
+<td align="center" style="vertical-align:middle;">&nbsp;</td>
+<td>Nov. 10</td>
+<td align="center" style="vertical-align:middle;">
+  <a class="my-link" href="readings/11-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a>
+</td>
+<td style="vertical-align:middle;">Biased Estimation: Ridge Regression</td>
+<td align="center" style="vertical-align:middle;">
+  <a class = "my-link" href="notes/10-biased-estimation-ridge-regression.html"><span class="fas fa-link"></span></a>
+</td>
+</tr>
+
 <!-- Unit 05: MODEL SELECTION -->
 
 
@@ -258,7 +275,7 @@ Unit 04: COLLINEARITY
 
 <!-- <tr> -->
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 10</td> -->
+<!-- <td>Nov. 15</td> -->
 <!-- <td align="center" style="vertical-align:middle;"></td> -->
 <!-- <td style="vertical-align:middle;">Model Selection Activity</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
@@ -269,7 +286,7 @@ Unit 04: COLLINEARITY
 
 <!-- <tr> -->
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 15</td> -->
+<!-- <td>Nov. 17</td> -->
 <!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
 <!--   <a class="my-link" href="readings/12-model-selection.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
@@ -281,43 +298,27 @@ Unit 04: COLLINEARITY
 
 <!-- <tr> -->
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 17</td> -->
-<!-- </tr> -->
-
-
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
 <!-- <td>Nov. 22</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a> -->
-<!-- </td> -->
-<!-- <td style="vertical-align:middle;">Model Selection: Cross-Validation Methods</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
-<!--   <a class = "my-link" href="posts/2021-11-18-notes-cross-validation"><span class="fas fa-link"></span></a> -->
-<!-- </td> -->
-<!-- </tr> -->
-
-<!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
-<!-- <td>Nov. 24</td> -->
-<!-- <td align="center" style="vertical-align:middle;"></td> -->
-<!-- <td style="vertical-align:middle;">NO CLASS --- Thanksgiving Break</td> -->
-<!-- <td align="center" style="vertical-align:middle;"></td> -->
 <!-- </tr> -->
 
 
-
 <!-- <tr> -->
-<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
+<!-- <td align="center" style="vertical-align:middle;" rowspan="2">&nbsp;</td> -->
 <!-- <td>Nov. 29</td> -->
-<!-- <td align="center" style="vertical-align:middle;"> -->
+<!-- <td align="center" style="vertical-align:middle;" rowspan="2"> -->
 <!--   <a class="my-link" href="readings/13-cross-validation.html"><span class="fa fa-book"></span></a> -->
 <!-- </td> -->
-<!-- <td style="vertical-align:middle;">Model Selection: Cross-Validation Methods</td> -->
+<!-- <td style="vertical-align:middle;" rowspan="2">Model Selection: Cross-Validation Methods</td> -->
 <!-- <td align="center" style="vertical-align:middle;"> -->
 <!--   <a class = "my-link" href="posts/2021-11-18-notes-cross-validation"><span class="fas fa-link"></span></a> -->
 <!-- </td> -->
 <!-- </tr> -->
+
+<!-- <tr> -->
+<!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
+<!-- <td>Dec. 01</td> -->
+<!-- </tr> -->
+
 
 
 <!-- Unit 06:PATH ANALYSIS -->
@@ -325,6 +326,9 @@ Unit 04: COLLINEARITY
 <!-- <tr> -->
 <!-- <td colspan="5"><b>Unit 06: Path Analysis</b></td> -->
 <!-- </tr> -->
+
+<!-- CUT THIS: Add to READING  -->
+
 
 <!-- <tr> -->
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
@@ -337,6 +341,8 @@ Unit 04: COLLINEARITY
 <!--   <a class = "my-link" href="posts/2021-11-22-notes-regression-from-summary-measures"><span class="fas fa-link"></span></a> -->
 <!-- </td> -->
 <!-- </tr> -->
+
+
 
 <!-- <tr> -->
 <!-- <td align="center" style="vertical-align:middle;">&nbsp;</td> -->
