--- a/schedule.qmd
+++ b/schedule.qmd
@@ -260,7 +260,7 @@ Unit 04: COLLINEARITY
 <td align="center" style="vertical-align:middle;">
   <a class="my-link" href="readings/11-biased-estimation-ridge-regression.html"><span class="fa fa-book"></span></a>
 </td>
-<td style="vertical-align:middle;">Biased Estimation: Ridge Regression</td>
+<td style="vertical-align:middle;">Biased Estimation: Ridge Regression <br /> <span style="margin-left:20px; color:red;">*[Notes Updated 11-10-2022]*</span></td>
 <td align="center" style="vertical-align:middle;">
   <a class = "my-link" href="notes/10-biased-estimation-ridge-regression.html"><span class="fas fa-link"></span></a>
 </td>
